--- a/.github/workflows/deploy-deta.yml
+++ b/.github/workflows/deploy-deta.yml
@@ -1,40 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy to Deta
+on: push
 
-name: Deploy to deta
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-    
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # Install Deta CLI as per docs
-    # https://docs.deta.sh/docs/cli/install
-    - name: Install Deta CLI
-      shell: bash
-      run: |
-        curl -fsSL https://get.deta.dev/cli.sh | sh
-
-    - name: Clone Deta Metadata
-      shell: bash
-      run: |
-        export DETA_ACCESS_TOKEN=${{ secret.DETA_ACCESS_TOKEN }}
-        ~/.deta/bin/deta clone --name Polmo-FastAPI-backend --project Polimo tmp/
-        cp -r tmp/.deta .
-    - name: Deploy to Deta 
-      shell: bash
-      run: |
-        export DETA_ACCESS_TOKEN=${{ inputs.deta-access-token }}
-        ~/.deta/bin/deta deploy
+      - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
+      - uses: BogDAAAMN/deta-deploy-action@v1.0.0
+        with:
+          deta-access-token: ${{ secrets.DETA_ACCESS_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
+          deta-name: 'Polmo-FastAPI-backend' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
+          deta-project: 'polmo' #Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
