--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip==21.1.3
+pip==21.3.1
 fastapi==0.66.0
 pydantic==1.8.2
 pathlib==1.0.1
@@ -12,3 +12,4 @@ uvicorn
 aiofiles
 python-multipart
 deta
+deta[async]==1.1.0a1
